--- a/2Tri-Ativ.1-main/index.html
+++ b/2Tri-Ativ.1-main/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Você decide o futuro da IA</title>
 </head>
+
 <body>
     <div class="cx-principal">
+        <h1>Você decide o futuro da IA</h1>
         <div class="cx-perguntas"></div>
         <div class="cx-alternativas"></div>
-        <div class="cx-resultado"></div>
+        <div class="cx-resultado">
         <p class="tx-resultado"></p>
     </div>
+    </div>
 
-    <script src="./main.js"></script>
+    <script src="main.js"></script>
 </body>
+
 </html>
