--- a/2Tri-Ativ.1-main/index.html
+++ b/2Tri-Ativ.1-main/index.html
@@ -14,7 +14,7 @@
         <div class="cx-perguntas"></div>
         <div class="cx-alternativas"></div>
         <div class="cx-resultado">
-        <p class="tx-resultado"></p>
+        <p class="texto-resultado"></p>
     </div>
     </div>
 
